2010-08-27  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Tony Chang.

        Insertion point does not show when dragging text into an editable area
        https://bugs.webkit.org/show_bug.cgi?id=44295

        r65681 caused the caret to use the last-computed caret rect when
        painting, rather than forcing a style update. Because of this,
        we now need to eagerly update the caret rect when changing
        the drag selection.

        Not testable in DRT because the drag selection is always cleared
        before EventSender returns, so the drag caret can never show in
        the pixel results.

        Tested by running editing/selection/drag-in-iframe.html manually.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::setSelection):

Canonical link: https://commits.webkit.org/57037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66269 268f45cc-cd09-0410-ab3c-d52691b4dbfc